# awtrix3-py

./: .flake8  BACKUP_RESTORE_GUIDE.md  CI_TEST_PLAN.md  CLAUDE.md  CLOCK_PROFILE_GUIDE.md  README.md  awtrix3.py  demo_mcp_install.cast  demo_mcp_install.sh  demo_mcp_usage.cast  demo_mcp_usage.sh  example.py  mcp_server.py  mets_logo.py  pyproject.toml  trixctl  trixctl-completion.bash
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
tests/: __init__.py  test_api.py  test_awtrix3.py  test_cli.py  test_docs.py
